Better spacing for links on issue pages

--- a/_src/assets/css/style.css
+++ b/_src/assets/css/style.css
@@ -505,6 +505,10 @@ li > ol {
   margin-left: var(--s1);
 }
 
+.issue li {
+  margin-bottom: var(--s0);
+}
+
 dt {
   border-bottom: 0.085em solid var(--lighttext);
   font-weight: 700;
